# plaw-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_en.md  README_zh.md  build.ps1  check_versions.py  dev.ps1  setup.ps1
.github/workflows/: plaw-eval.yml
.kiro/specs/plaw-elite/: 00-vision.md  01-roadmap.md
crates/plaw-eval/: Cargo.toml  README.md
crates/plaw-eval-cli/: Cargo.toml
crates/plaw-eval-cli/src/: main.rs
crates/plaw-eval/src/: lib.rs
crates/plaw-eval/src/flywheel/: mod.rs  promoter.rs  reviewer.rs  sampler.rs  trace_ingest.rs
crates/plaw-eval/src/judges/: builder.rs  client.rs  jury.rs  mod.rs  pairwise.rs
crates/plaw-eval/src/metrics/: g_eval.rs  keywords.rs  mod.rs  runner.rs  tool.rs
crates/plaw-eval/src/report/: gate.rs  json.rs  markdown.rs  mod.rs  pr_comment.rs  sarif.rs
crates/plaw-eval/src/runner/: aggregate.rs  cache.rs  executor.rs  mod.rs  plaw_client.rs
crates/plaw-eval/src/stats/: bradley_terry.rs  ci.rs  cluster_se.rs  mod.rs  paired.rs  power.rs
crates/plaw-eval/src/storage/: mod.rs  repo.rs  schema.rs
crates/plaw-eval/src/suite/: case.rs  loader.rs  mod.rs  version.rs
crates/plaw-eval/tests/: m10_flywheel_integration.rs  m2_storage_integration.rs  m3_runner_integration.rs  m6_aggregate_compare_integration.rs
docs/eval/: baseline-2026-Q2-post-phase2.md  baseline-2026-Q2.md  baseline-workflow.md  ci-secrets.md  judge-selection.md  methodology.md  suite-design.md  troubleshooting.md
evals/: README.md  作者助手.html  作者指南.md
evals/_l1_targets/: cases.toml
evals/_template/: cases.toml
evals/agent_multi_step/: README.md  cases.toml
evals/chat_quality/: README.md  cases.toml
evals/error_recovery/: README.md
evals/rag_grounded_qa/: README.md  cases.toml
evals/tool_routing/: README.md  cases.toml
plaw/: .coderabbit.yaml  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.el.md  CONTRIBUTING.md  Cargo.toml  README.md  RUN_TESTS.md  SECURITY.md  TESTING_TELEGRAM.md  TRADEMARK.md  clippy.toml  config.toml.example  docker-compose.yml
plaw/.gemini/: style-guide.md
plaw/.github/: pull_request_template.md
plaw/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
plaw/.github/codeql/: codeql-config.yml
plaw/.github/release/: canary-policy.json  docs-deploy-policy.json  ghcr-tag-policy.json  ghcr-vulnerability-policy.json  nightly-owner-routing.json  prerelease-stage-gates.json  release-artifact-contract.json
plaw/.github/security/: deny-ignore-governance.json  gitleaks-allowlist-governance.json  unsafe-audit-governance.json
plaw/.github/workflows/: ci-run.yml  ci-supply-chain-provenance.yml  docs-deploy.yml  main-branch-flow.md  pr-auto-response.yml  pub-docker-img.yml  pub-prerelease.yml  pub-release.yml  sec-audit.yml  sync-contributors.yml
plaw/benches/: agent_benchmarks.rs
plaw/crates/plaw-repo-map/: Cargo.toml
plaw/crates/plaw-repo-map/queries/: go-tags.scm  javascript-tags.scm  python-tags.scm  rust-tags.scm  typescript-tags.scm
plaw/crates/plaw-repo-map/src/: budget.rs  cache.rs  graph.rs  lang.rs  lib.rs  parser.rs  ranking.rs  renderer.rs  tag.rs  walk.rs
plaw/crates/plaw-repo-map/tests/: integration.rs
plaw/crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
plaw/dev/: README.md  config.template.toml  config.wasm.dev.toml  config.wasm.prod.toml  config.wasm.staging.toml  docker-compose.ci.yml  docker-compose.yml
plaw/docs/: README.md  SUMMARY.el.md  SUMMARY.fr.md  SUMMARY.ja.md  SUMMARY.md  SUMMARY.ru.md  SUMMARY.vi.md  SUMMARY.zh-CN.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  android-setup.md  arduino-uno-q-setup.md  audit-event-schema.md  audit-logging.md  cargo-slicer-speedup.md  channels-reference.md  commands-reference.md  config-reference.md  custom-providers.md  dead-code-audit-2026-05-04.md  dead-code-hygiene.md  docker-setup.md  docs-inventory.md  frictionless-security.md  hardware-peripherals-design.md  i18n-coverage.md  i18n-guide.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  network-deployment.md  nextcloud-talk-setup.md  nucleo-setup.md  one-click-bootstrap.md  operations-runbook.md  pr-workflow.md  project-triage-snapshot-2026-02-18.md  prompt-section-dag-design.md  providers-reference.md  (+10 more)
plaw/docs/contributing/: README.md
plaw/docs/datasheets/: arduino-uno.md  esp32.md
plaw/docs/getting-started/: README.md  macos-update-uninstall.md
plaw/docs/hardware/: README.md
plaw/docs/i18n/: README.md
plaw/docs/operations/: README.md  feature-matrix-runbook.md  nightly-all-features-runbook.md  (+1 more)
plaw/examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
plaw/fuzz/: Cargo.toml
plaw/python/: README.md  pyproject.toml
plaw/site/: README.md  package-lock.json  package.json  vite.config.ts
plaw/skills/: README.md
plaw/src/: checkpoint_cli.rs  db.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  update.rs  util.rs
plaw/tests/: agent_e2e.rs  agent_loop_robustness.rs  channel_routing.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  gemini_fallback_oauth_refresh.rs  hooks_integration.rs  memory_comparison.rs  memory_restart.rs  openai_codex_vision_e2e.rs  provider_resolution.rs  provider_schema.rs  telegram_attachment_fallback.rs  whatsapp_webhook_security.rs  windows_token_il_spawn.rs
plaw/web/: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.build.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capsules.rs  cron_watcher.rs  embedding.rs  knowledge.rs  lib.rs  main.rs  notifications.rs  plaw.rs  sessions.rs  skills.rs
src-tauri/src/commands/: capsules.rs  config.rs  embedding.rs  gateway.rs  knowledge.rs  mod.rs  notifications.rs  plaw_control.rs  sessions.rs  skills_cmd.rs  uploads.rs
src-tauri/src/services/: bundle.rs  config.rs  data_dir.rs  mod.rs  port.rs  proxy.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  design-tokens.css  main.js  style.css
web/src/i18n/: en.js  (+1 more)
(+436 files in other folders)
