# Plaw Desktop workspace root.
#
# This workspace hosts the eval foundation (plaw-elite Phase 1).
# - `plaw/` is its own workspace and is not a member here.
# - `src-tauri/` builds independently via Tauri's build system.

[workspace]
members = [
    "crates/plaw-eval",
    "crates/plaw-eval-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["plaw-desktop contributors"]

[workspace.dependencies]
# Statistical primitives (CI, t-distribution, etc.)
statrs = "0.18"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "signal", "io-util"] }
tokio-stream = "0.1"

# WebSocket client (for talking to plaw)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP client (for judge LLM calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# Hashing (for cache keys)
sha2 = "0.10"

# Progress
indicatif = "0.17"

# UUIDs (for run IDs)
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
