[package]
name = "plaw-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "plaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
log = "0.4"
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"
chacha20poly1305 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
