[package]
name = "plaw-eval"
description = "Evaluation foundation for plaw — Anthropic-rigor LLM eval in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
statrs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
indicatif.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
